# CRA-Protocol-Sovereign-Code-Package

./: .gitignore  LICENSE.md  README.md  package.json  pyproject.toml
audit/: config.js
audit/utils/: decodeLog.js  graphqlClient.js
client/: client_sdk.js  config.js  example.js – Quick demo script
client/utils/: signer.js
test/: test_cascade.js
