[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cra-sov"
version = "0.1.0"
description = "CRA Protocol Sovereign SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "CRA Team"}]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
    "pydantic>=2.0"
]
